--- a/index.html
+++ b/index.html
@@ -62,7 +62,24 @@
       background: #ccff00;
     }
   </style>
+  <meta name="description"
+    content="Trasforma la creazione di Richieste d'Acquisto da onere burocratico a vantaggio competitivo. Zero moduli. Zero errori. 100% Compliance." />
 
+  <!-- Open Graph / Facebook / LinkedIn -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://raise-website.vercel.app/" />
+  <meta property="og:title" content="RAISE | AI RDA Copilot" />
+  <meta property="og:description"
+    content="Trasforma la creazione di Richieste d'Acquisto da onere burocratico a vantaggio competitivo." />
+  <meta property="og:image" content="/og-image.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://raise-website.vercel.app/" />
+  <meta property="twitter:title" content="RAISE | AI RDA Copilot" />
+  <meta property="twitter:description"
+    content="Trasforma la creazione di Richieste d'Acquisto da onere burocratico a vantaggio competitivo." />
+  <meta property="twitter:image" content="/og-image.png" />
 </head>
 
 <body>
